web-infras/parser/tests/fixtures/esprima/expression/primary/keyword/invalid-escaped-null/output.txt
[SyntaxError]: keyword can not have any escap unicode (1,1)
1|nul\u{6c}
 |^
